# blufire-ai-sytem

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.example.yaml  deploy.sh  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.json  uninstall.sh
.github/workflows/: ci.yml
agents/: DAILY_RUN.sh  INSTALL.sh  README.md
agents/00-medic/: the-dispatcher.md  the-medic.md
agents/01-outbound/: roofing-queen.md  the-caller.md  the-connector.md  the-mailer.md  the-messenger.md  the-scout.md
agents/02-social/: facebook-agent.md  gbp-agent.md  instagram-agent.md  linkedin-agent.md  social-media-supervisor.md  tiktok-agent.md  youtube-agent.md
agents/03-customer-service/: cs-billing-agent.md  cs-investigator.md  cs-product-agent.md  cs-supervisor.md
agents/04-web/: code-agent.md  lovable-agent.md  qa-agent.md  seo-agent.md  web-department-director.md  webflow-agent.md
agents/05-ai/: ai-build-agent.md  ai-delivery-agent.md  ai-solutions-director.md
agents/06-sales/: sales-director.md  sales-pipeline-agent.md  sales-proposal-agent.md
agents/07-revenue/: revenue-intelligence-agent.md
agents/08-video/: video-director-agent.md  video-post-production-agent.md  video-production-coordinator.md
agents/09-creative/: asset-producer-agent.md  creative-director-agent.md
agents/ai/: ai-build-agent.md  ai-delivery-agent.md  ai-solutions-director.md
agents/core/: dispatcher.md  medic.md
agents/creative/: asset-producer.md  creative-director.md  revenue-intelligence.md
agents/cs/: billing-agent.md  cs-supervisor.md  investigator.md  product-agent.md
agents/outbound/: caller.md  connector.md  mailer.md  messenger.md  roofing-queen.md  scout.md
agents/sales/: pipeline-agent.md  proposal-agent.md  sales-director.md
agents/social/: facebook-agent.md  gbp-agent.md  instagram-agent.md  linkedin-agent.md  social-supervisor.md  tiktok-agent.md  youtube-agent.md
agents/video/: post-production-agent.md  production-coordinator.md  video-director.md
agents/web/: code-agent.md  lovable-agent.md  qa-agent.md  seo-agent.md  web-director.md  webflow-agent.md
commands/: brainstorm.md
packaging/logrotate/: blufire
packaging/systemd/: blufire-leadgen-backyard.timer.example  blufire-leadgen.service.in  blufire-leadgen.timer
packaging/tenants/: backyard-builders.README.md  backyard-builders.env.example  backyard-builders.system-prompt.txt  backyard-builders.yaml.example
ruflo/: orchestrator.py
ruflo/config/: ruflo.yaml
ruflo/queens/: adaptive.yaml  strategic.yaml  tactical.yaml
ruflo/scripts/: _lead_helpers.py  apollo_dfw_contractors.py  daily_lead_gen.py  generate_agents.py  send_outreach.py  setup_cron.sh
skills/seo/: sites.json
src/: hubspot.py
tests/: conftest.py
(+250 files in other folders)
