[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blufire"
version = "1.0.0"
description = "Blufire autopilot — agency-resaleable sales/marketing automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Bluewave Strategic Resources" }]
dependencies = [
    "anthropic==0.91.0",
    "requests==2.32.3",
    "urllib3==2.2.3",
    "tenacity==9.0.0",
    "pybreaker==1.2.0",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "PyYAML==6.0.2",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
]

[project.optional-dependencies]
prod = [
    "sentry-sdk==2.18.0",
]
unsubscribe-server = [
    "starlette==0.41.2",
    "uvicorn==0.32.0",
]
gsheets = [
    "gspread==6.1.4",
    "google-auth==2.36.0",
]
places = [
    "googlemaps==4.10.0",
    "beautifulsoup4==4.12.3",
]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "responses==0.25.3",
    "aiosmtpd==1.4.6",
    "mypy==1.13.0",
    "ruff==0.7.4",
    "bandit==1.7.10",
    "pip-audit==2.7.3",
    "types-requests==2.32.0.20241016",
    "types-PyYAML==6.0.12.20240917",
]

[project.scripts]
blufire = "blufire.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["blufire*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "S",               # bandit
    "SIM",             # simplify
    "RUF",             # ruff
]
ignore = [
    "S101",  # asserts in tests are fine
    "S311",  # non-cryptographic random
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
files = ["src/blufire"]

[[tool.mypy.overrides]]
module = ["pybreaker.*", "aiosmtpd.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "integration: integration tests (mocked externals)",
    "unit: pure unit tests",
]

[tool.coverage.run]
branch = true
source = ["src/blufire", "src/agents", "ruflo"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "ruflo/agents"]
skips = ["B101"]
